--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <!----voy a tener sueño-->
       <div class="marcoTarjeta">
       <a href="index_sonie.html">
-        <img src=".jpg" alt="" />
+        <img src="imagen1.gif" alt="" />
         <h2>Voy a tener sueño</h2>
         <p>
          "Soñé" es un registro de todos los sueños que Fernanda Mugica compartió en su cuenta de tuiter @vanityfer entre los años 2008 y 2020. Casi todo el arte que usamos en este libro son pinturas digitales de Canek Zapata, bocetos que salen del proceso de crear memes y otras cosas. Es algo así como un libro objeto o libre arte digital. 
@@ -47,7 +47,7 @@
       <!---galope-->
 <div class="marcoTarjeta">
       <a href="galope.html">
-        <img src=".jpg" alt="" />
+        <img src="imagen2.gif" alt="" />
         <h2>Galope</h2>
         <p>
          Between the gallop of the signifier and the course of life, there is a slide, an eternal detachment that nothing –no anchorage– will be able to fill or reabsorb in a coincidence with itself of which you would be the subject.
@@ -59,7 +59,7 @@
       <!---- kamikaze-->
 <div class="marcoTarjeta">
       <a href="http://fernandamugica.com/kamikaze.html">
-        <img src=".jpg" alt="" />
+        <img src="imagen4.gif" alt="" />
         <h2>Kamikaze</h2>
         <p>
          Un poema a la ciudad de Mar del Plata
@@ -70,7 +70,7 @@
     <div class="tarjeta"> <!---- mentirosa la letra-->
 <div class="marcoTarjeta">
         <a href="http://fernandamugica.como/mentirosalaletra.html">
-        <img src=".jpg" alt="" />
+        <img src="imagen9.gif" alt="" />
         <h2>Mentirosa la letra</h2>
         <p>
          Homenaje a Ferdinand de Saussure
