--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <div class="tarjeta"> <!---- mentirosa la letra-->
 <div class="marcoTarjeta">
-        <a href="http://fernandamugica.como/mentirosalaletra.html">
+        <a href="http://fernandamugica.com/mentirosalaletra.html">
         <img src="imagen9.gif" alt="" />
         <h2>Mentirosa la letra</h2>
         <p>
