--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <div class="tarjetas">
     <div class="tarjeta"><!----hiperespaciadora -->
       <div class="marcoTarjeta">
-      <a href="hiperespaciadora.html">
+      <a href="http://fernandamugica.com/hiperespaciadora.html">
         <img src="imagen15.gif" alt="" />
         <h2>Hiperespaciadora</h2>
         <p>
@@ -34,7 +34,7 @@
     <div class="tarjeta">
       <!----voy a tener sueño-->
       <div class="marcoTarjeta">
-      <a href="index_sonie.html">
+      <a href="http://fernandamugica.com/index_sonie.html">
         <img src="imagen1.gif" alt="" />
         <h2>Voy a tener sueño</h2>
         <p>
@@ -46,7 +46,7 @@
     <div class="tarjeta">
       <!---galope-->
 <div class="marcoTarjeta">
-      <a href="galope.html">
+      <a href="http://fernandamugica.com/galope.html">
         <img src="imagen2.gif" alt="" />
         <h2>Galope</h2>
         <p>
